syntax = "proto3";

package chatService;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/NorthDice/DeepLink/protos;chatv1";

service ChatService {
  rpc CreateChat (CreateChatRequest) returns (CreateChatResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc ListChats (ListChatsRequest) returns (ListChatsResponse);
  rpc StreamMessages (StreamMessagesRequest) returns (stream StreamMessagesResponse);
}

message CreateChatRequest {
  int64 user_id = 1;
  repeated int64 participant_ids = 2;
}

message CreateChatResponse {
  int64 chat_id = 1;
}

message SendMessageRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message SendMessageResponse {
  bool success = 1;
}

message GetMessagesRequest {
  int64 chat_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message ListChatsRequest {
  int64 user_id = 1;
}

message ListChatsResponse {
  repeated Chat chats = 1;
}

message StreamMessagesRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
}

message StreamMessagesResponse {
  Message message = 1;
}

message Message {
  int64 message_id = 1;
  int64 chat_id = 2;
  int64 user_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

message Chat {
  int64 chat_id = 1;
  repeated int64 participant_ids = 2;
  google.protobuf.Timestamp created_at = 3;
}