syntax = "proto3";

package kafkaService;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option go_package = "github.com/NorthDice/DeepLink/protos;kafkav1";

service KafkaService{
  rpc CreatePost (PostCreateEvent) returns (google.protobuf.Empty);
  rpc DeletePost (PostDeletedEvent) returns (google.protobuf.Empty);
  rpc LikePost (PostLikedEvent) returns (google.protobuf.Empty);
  rpc AddComment (CommentAddedEvent) returns (google.protobuf.Empty);
}

message  PostCreateEvent {
  int64 post_id = 1;
  int64 user_id = 2;
  string content = 3;
  repeated string media_url = 4;
  google.protobuf.Timestamp created_at = 5;
}

message PostDeletedEvent {
  int64 post_id = 1;
}

message PostLikedEvent {
  int64 post_id = 1;
  int64 user_id = 2;
}

message CommentAddedEvent {
  int64 post_id = 1;
  int64 user_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
}